--- a/VolleyballScoreSheet/Views/Rotation.xaml
+++ b/VolleyballScoreSheet/Views/Rotation.xaml
@@ -1,30 +1,19 @@
-﻿<UserControl
-    x:Class="VolleyballScoreSheet.Views.Rotation"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:VolleyballScoreSheet.ViewModels"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="http://prismlibrary.com/"
-    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml">
+﻿<UserControl x:Class="VolleyballScoreSheet.Views.Rotation" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:local="clr-namespace:VolleyballScoreSheet.ViewModels" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:prism="http://prismlibrary.com/" xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml">
 
     <prism:Dialog.WindowStyle>
         <Style BasedOn="{StaticResource UiWindow}" TargetType="Window">
-            <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterOwner" />
+            <Setter Property="MinHeight" Value="50" />
             <Setter Property="ResizeMode" Value="NoResize" />
             <Setter Property="ShowInTaskbar" Value="False" />
-            <Setter Property="Width" Value="600" />
-            <Setter Property="MinHeight" Value="50" />
             <Setter Property="SizeToContent" Value="Height" />
+            <Setter Property="Width" Value="600" />
             <Setter Property="WindowStyle" Value="ToolWindow" />
+            <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterOwner" />
         </Style>
     </prism:Dialog.WindowStyle>
 
     <StackPanel>
-        <wpfui:TitleBar
-            Title="Rotation"
-            ShowMaximize="False"
-            ShowMinimize="False" />
+        <wpfui:TitleBar Title="Rotation" ShowMaximize="False" ShowMinimize="False" />
         <StackPanel Margin="10">
 
             <TextBlock Margin="5" FontSize="20">スターティングラインアップを入力してください。</TextBlock>
@@ -41,19 +30,8 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
 
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Margin="5"
-                    FontSize="30"
-                    Text="{Binding LeftSideTeamName.Value}" />
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    Margin="5"
-                    HorizontalAlignment="Right"
-                    FontSize="30"
-                    Text="{Binding RightSideTeamName.Value}" />
+                <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" FontSize="30" Text="{Binding LeftSideTeamName}" />
+                <TextBlock Grid.Row="0" Grid.Column="1" Margin="5" HorizontalAlignment="Right" FontSize="30" Text="{Binding RightSideTeamName}" />
 
                 <DataGrid
                     Grid.Row="1"
@@ -69,16 +47,12 @@
                     RowHeaderWidth="0">
                     <DataGrid.ColumnHeaderStyle>
                         <Style BasedOn="{StaticResource DefaultDataGridColumnHeaderStyle}" TargetType="DataGridColumnHeader">
-                            <Setter Property="HorizontalContentAlignment" Value="Center" />
                             <Setter Property="FontSize" Value="15" />
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
                         </Style>
                     </DataGrid.ColumnHeaderStyle>
                     <DataGrid.Columns>
-                        <DataGridTextColumn
-                            Width="1*"
-                            Binding="{Binding Id}"
-                            CanUserResize="False"
-                            Header="番号">
+                        <DataGridTextColumn Width="1*" Binding="{Binding Id}" CanUserResize="False" Header="番号">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="HorizontalAlignment" Value="Center" />
@@ -87,11 +61,7 @@
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
 
-                        <DataGridTextColumn
-                            Width="2*"
-                            Binding="{Binding Name}"
-                            CanUserResize="False"
-                            Header="名前">
+                        <DataGridTextColumn Width="2*" Binding="{Binding Name}" CanUserResize="False" Header="名前">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="HorizontalAlignment" Value="Center" />
@@ -99,19 +69,6 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-
-                        <DataGridCheckBoxColumn
-                            Width="1*"
-                            Binding="{Binding IsLibero}"
-                            CanUserResize="False"
-                            Header="リベロ">
-                            <DataGridCheckBoxColumn.ElementStyle>
-                                <Style TargetType="CheckBox">
-                                    <Setter Property="HorizontalAlignment" Value="Center" />
-                                    <Setter Property="VerticalAlignment" Value="Center" />
-                                </Style>
-                            </DataGridCheckBoxColumn.ElementStyle>
-                        </DataGridCheckBoxColumn>
                     </DataGrid.Columns>
                 </DataGrid>
                 <DataGrid
@@ -128,16 +85,12 @@
                     RowHeaderWidth="0">
                     <DataGrid.ColumnHeaderStyle>
                         <Style BasedOn="{StaticResource DefaultDataGridColumnHeaderStyle}" TargetType="DataGridColumnHeader">
-                            <Setter Property="HorizontalContentAlignment" Value="Center" />
                             <Setter Property="FontSize" Value="15" />
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
                         </Style>
                     </DataGrid.ColumnHeaderStyle>
                     <DataGrid.Columns>
-                        <DataGridTextColumn
-                            Width="1*"
-                            Binding="{Binding Id}"
-                            CanUserResize="False"
-                            Header="番号">
+                        <DataGridTextColumn Width="1*" Binding="{Binding Id}" CanUserResize="False" Header="番号">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="HorizontalAlignment" Value="Center" />
@@ -146,11 +99,7 @@
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
 
-                        <DataGridTextColumn
-                            Width="2*"
-                            Binding="{Binding Name}"
-                            CanUserResize="False"
-                            Header="名前">
+                        <DataGridTextColumn Width="2*" Binding="{Binding Name}" CanUserResize="False" Header="名前">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="HorizontalAlignment" Value="Center" />
@@ -158,19 +107,6 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-
-                        <DataGridCheckBoxColumn
-                            Width="1*"
-                            Binding="{Binding IsLibero}"
-                            CanUserResize="False"
-                            Header="リベロ">
-                            <DataGridCheckBoxColumn.ElementStyle>
-                                <Style TargetType="CheckBox">
-                                    <Setter Property="HorizontalAlignment" Value="Center" />
-                                    <Setter Property="VerticalAlignment" Value="Center" />
-                                </Style>
-                            </DataGridCheckBoxColumn.ElementStyle>
-                        </DataGridCheckBoxColumn>
                     </DataGrid.Columns>
                 </DataGrid>
 
@@ -184,48 +120,12 @@
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <wpfui:TextBox
-                        Grid.Row="1"
-                        Grid.Column="2"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅰ"
-                        Text="{Binding LeftTeamRotatiton.Value[0]}" />
-                    <wpfui:TextBox
-                        Grid.Row="0"
-                        Grid.Column="2"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅱ"
-                        Text="{Binding LeftTeamRotatiton.Value[1]}" />
-                    <wpfui:TextBox
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅲ"
-                        Text="{Binding LeftTeamRotatiton.Value[2]}" />
-                    <wpfui:TextBox
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅳ"
-                        Text="{Binding LeftTeamRotatiton.Value[3]}" />
-                    <wpfui:TextBox
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅴ"
-                        Text="{Binding LeftTeamRotatiton.Value[4]}" />
-                    <wpfui:TextBox
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅵ"
-                        Text="{Binding LeftTeamRotatiton.Value[5]}" />
+                    <wpfui:TextBox Grid.Row="1" Grid.Column="2" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅰ" Text="{Binding LeftTeamRotatiton[0]}" />
+                    <wpfui:TextBox Grid.Row="0" Grid.Column="2" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅱ" Text="{Binding LeftTeamRotatiton[1]}" />
+                    <wpfui:TextBox Grid.Row="0" Grid.Column="1" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅲ" Text="{Binding LeftTeamRotatiton[2]}" />
+                    <wpfui:TextBox Grid.Row="0" Grid.Column="0" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅳ" Text="{Binding LeftTeamRotatiton[3]}" />
+                    <wpfui:TextBox Grid.Row="1" Grid.Column="0" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅴ" Text="{Binding LeftTeamRotatiton[4]}" />
+                    <wpfui:TextBox Grid.Row="1" Grid.Column="1" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅵ" Text="{Binding LeftTeamRotatiton[5]}" />
                 </Grid>
 
 
@@ -240,57 +140,15 @@
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <wpfui:TextBox
-                        Grid.Row="1"
-                        Grid.Column="2"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅰ"
-                        Text="{Binding RightTeamRotatiton.Value[0]}" />
-                    <wpfui:TextBox
-                        Grid.Row="0"
-                        Grid.Column="2"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅱ"
-                        Text="{Binding RightTeamRotatiton.Value[1]}" />
-                    <wpfui:TextBox
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅲ"
-                        Text="{Binding RightTeamRotatiton.Value[2]}" />
-                    <wpfui:TextBox
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅳ"
-                        Text="{Binding RightTeamRotatiton.Value[3]}" />
-                    <wpfui:TextBox
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅴ"
-                        Text="{Binding RightTeamRotatiton.Value[4]}" />
-                    <wpfui:TextBox
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Margin="5"
-                        ClearButtonEnabled="False"
-                        PlaceholderText="Ⅵ"
-                        Text="{Binding RightTeamRotatiton.Value[5]}" />
+                    <wpfui:TextBox Grid.Row="1" Grid.Column="2" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅰ" Text="{Binding RightTeamRotatiton[0]}" />
+                    <wpfui:TextBox Grid.Row="0" Grid.Column="2" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅱ" Text="{Binding RightTeamRotatiton[1]}" />
+                    <wpfui:TextBox Grid.Row="0" Grid.Column="1" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅲ" Text="{Binding RightTeamRotatiton[2]}" />
+                    <wpfui:TextBox Grid.Row="0" Grid.Column="0" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅳ" Text="{Binding RightTeamRotatiton[3]}" />
+                    <wpfui:TextBox Grid.Row="1" Grid.Column="0" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅴ" Text="{Binding RightTeamRotatiton[4]}" />
+                    <wpfui:TextBox Grid.Row="1" Grid.Column="1" Margin="5" ClearButtonEnabled="False" PlaceholderText="Ⅵ" Text="{Binding RightTeamRotatiton[5]}" />
                 </Grid>
             </Grid>
-            <Button
-                Margin="0,5"
-                Padding="10"
-                Command="{Binding NextCommand}"
-                Content="次へ"
-                FontSize="30"
-                Style="{StaticResource LightButton}" />
+            <Button Margin="0,5" Padding="10" Command="{Binding NextCommand}" Content="次へ" FontSize="30" Style="{StaticResource LightButton}" />
         </StackPanel>
     </StackPanel>
 </UserControl>
